--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-
+<div id="useremail">  </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" id="navbar-brand" href="#">Footprint</a>
@@ -42,7 +42,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " data-toggle="modal" data-target="#modalLoginForm">Log In/Sign Up</a>
+                        <a class="nav-link " data-toggle="modal" id="login" data-target="#modalLoginForm">Log In/Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " id="btnLogout" data-toggle="modal">Log Out</a>
