--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <div id="title"></div>
 
-        <button id="itinerary-add-btn2" class="btn btn-success">Add Park to Itinerary</button>
+        <button id="itinerary-add-btn" class="btn btn-success">Add Park to Itinerary</button>
 
         <div id="main-img-container"></div>
 
@@ -154,16 +154,12 @@
 
         <div id="links"></div>        
     
-        <div id="itinerary" >
+        <div id="itinerary">
+            <h1 id="itinerary-park-title"></h1>
             <!-- table showing itinerary rows -->
-            <div id="itinerary-container" class="col-lg-12">
+            <div id="itinerary-container" class="container">
                 <div class="row itinerary-view-head"></div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 id='trip-itinerary'>Trip Itinerary</h2>
-                        <button id="itinerary-add-btn" class="btn btn-success">Add Park to Itinerary</button>
-                    </div>
-                </div>
+                <h2>Trip Itinerary</h2>
                 <div class="row itinerary-view">
                     <div class="col-lg-12">
                         <div class="row itinerary-data-head" id="itinerary-data-head">
@@ -187,7 +183,7 @@
     <!-- itinerary modal dialog -->
     <div class="modal fade" id="editItinModal" tabindex="-1" role="dialog" aria-labelledby="editItinModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="editItinModalLabel">&nbsp;</h5>
@@ -203,7 +199,7 @@
                         </div> -->
                         <div class="form-group">
                             <label for="start-date" class="col-form-label">Start Date:</label>
-                            <input type="text" class="form-control" id="datepicker">
+                            <input type="text" class="form-control" id="start-date">
                         </div>
                         <div class="form-group">
                             <label for="end-date" class="col-form-label">End Date:</label>
@@ -212,10 +208,11 @@
                         <div class="form-group">
                             <label for="num-days" class="col-form-label">Days:</label>
                             <input type="text" class="form-control" id="num-days">
-                        </div>
-                        <div id="modal-weather-info">
+                            <!-- <input type="text" class="form-control" id="num-days"> -->
                         </div>
                     </form>
+                    <div id="input-err" class="input-err"></div>
+                    <div id="modal-weather-info"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="closeItin-btn" class="btn btn-secondary" data-dismiss="modal">Close</button>
