--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<div id="useremail">  </div>
+<div id="useremail"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" id="navbar-brand" href="#">Footprint</a>
@@ -154,24 +154,19 @@
 
         <div id="links"></div>        
     
-        <div id="itinerary">
-            <h1 id="itinerary-park-title"></h1>
-            <!-- table showing itinerary rows -->
-            <div id="itinerary-container" class="container">
-                <div class="row itinerary-view-head"></div>
-                <h2>Trip Itinerary</h2>
-                <div class="row itinerary-view">
-                    <div class="col-lg-12">
-                        <div class="row itinerary-data-head" id="itinerary-data-head">
-                            <div class="col-md-1">&nbsp;</div>
-                            <div class="col-md-5">Park Name</div>
-                            <div class="col-md-2 text-center">Start Date</div>
-                            <div class="col-md-2 text-center">End Date</div>
-                            <div class="col-md-1 text-center">Days</div>
-                            <div class="col-md-1 text-center">&nbsp;</div>
-                        </div>
-                        <div id="itinerary-data" class="itinerary-data"></div>
+        <div id="itinerary" class="container">
+            <h2 id="itinerary-title">Trip Itinerary</h2>
+            <div class="row itinerary-view">
+                <div class="col-lg-12">
+                    <div class="row itinerary-data-head" id="itinerary-data-head">
+                        <div class="col-md-1">&nbsp;</div>
+                        <div class="col-md-5">Park Name</div>
+                        <div class="col-md-2 text-center">Start Date</div>
+                        <div class="col-md-2 text-center">End Date</div>
+                        <div class="col-md-1 text-center">Days</div>
+                        <div class="col-md-1 text-center">&nbsp;</div>
                     </div>
+                    <div id="itinerary-data" class="itinerary-data"></div>
                 </div>
             </div>
         </div>
@@ -229,29 +224,29 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-    <!-- firebase -->
-    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
-
-    <!-- login js -->
-    <script src="assets/javascript/app.js"></script>
-
-    <!-- login js -->
-    <script src="assets/javascript/login.js"></script>
-
-    <!-- search js -->
-    <script src="assets/javascript/search.js"></script>
-
-    <!-- weather js -->
-    <script src="assets/javascript/weather.js"></script>
-
-    <!-- itinerary js -->
-    <script src="assets/javascript/itinerary.js"></script>
-
     <!-- moment js -->
     <script src="assets/javascript/moment.js"></script>
 
-    <!-- parks.js -->
-    <script src="assets/javascript/parks.js"></script>
+    <!-- firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+
+     <!-- parks.js -->
+     <script src="assets/javascript/parks.js"></script>
+
+    <!-- app.js -->
+    <script src="assets/javascript/app.js"></script>
+
+    <!-- login.js -->
+    <script src="assets/javascript/login.js"></script>
+
+    <!-- search.js -->
+    <script src="assets/javascript/search.js"></script>
+
+    <!-- weather.js -->
+    <script src="assets/javascript/weather.js"></script>
+
+    <!-- itinerary.js -->
+    <script src="assets/javascript/itinerary.js"></script>
 
 </body>
 
