itinerary mobile responsive

--- a/index.html
+++ b/index.html
@@ -159,12 +159,11 @@
             <div class="row itinerary-view">
                 <div class="col-lg-12">
                     <div class="row itinerary-data-head" id="itinerary-data-head">
-                        <div class="col-md-1">&nbsp;</div>
-                        <div class="col-md-5">Park Name</div>
-                        <div class="col-md-2 text-center">Start Date</div>
-                        <div class="col-md-2 text-center">End Date</div>
-                        <div class="col-md-1 text-center">Days</div>
-                        <div class="col-md-1 text-center">&nbsp;</div>
+                        <div class="col-md-1 col-sm-1 col-1 lead">&nbsp;</div>
+                        <div class="col-md-5 col-sm-7 col-7 lead">Park Name</div>
+                        <div class="col-md-2 lead text-center end-title">End Date</div>
+                        <div class="col-md-1 col-sm-3 col-3 lead text-center days-title">Days</div>
+                        <div class="col-md-1 col-sm-1 col-1 lead text-center">&nbsp;</div>
                     </div>
                     <div id="itinerary-data" class="itinerary-data"></div>
                 </div>
