fixed start-title issue

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                     <div class="row itinerary-data-head" id="itinerary-data-head">
                         <div class="col-md-1 col-sm-1 col-1 lead">&nbsp;</div>
                         <div class="col-md-5 col-sm-7 col-7 lead">Park Name</div>
+                        <div class="col-md-2 lead text-center start-title">Start Date</div>
                         <div class="col-md-2 lead text-center end-title">End Date</div>
                         <div class="col-md-1 col-sm-3 col-3 lead text-center days-title">Days</div>
                         <div class="col-md-1 col-sm-1 col-1 lead text-center">&nbsp;</div>
