--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <input type="email" class="form-control validate" placeholder="Email" id="txtEmail">
             <label data-error="wrong" data-success="right" for="defaultForm-email">Your Email</label>
             </div>
-
+            <div id="error"></div>
             <div class="md-form mb-4">
             <i class="fas fa-lock prefix grey-text"></i>
             <input type="password" class="form-control validate" placeholder="Password" id="txtPass">
