--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
         </div>
         <div class="modal-footer d-flex justify-content-center">
-            <button class="btn btn-default" data-dismiss="modal" id="btnLogin">Login</button>
-            <button class="btn btn-default" data-dismiss="modal" id="btnSignup">Sign-up</button>
+            <button class="btn btn-default" id="btnLogin">Login</button>
+            <button class="btn btn-default" id="btnSignup">Sign-up</button>
         </div>
         </div>
     </div>
