--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/dropdown.css">
 
+    <link rel="icon" href="assets/images/footprint.ico">
+
 </head>
 
 <body>
